Fix checkbox query field line spacing

--- a/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/content.less
+++ b/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/content.less
@@ -123,3 +123,12 @@ body {
 .flex-child-menu {
   flex: 2;
 }
+
+.query-field > .checkbox {
+  &:first-of-type {
+    margin-top: 0;
+  }
+  &:last-of-type {
+    margin-bottom: 0;
+  }
+}
